--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: ggmedsl
-Title: Create ggplot2 Graphics Using MEDSL Colors and Branding.
+Title: Create ggplot2 Graphics Using MEDSL Colors and Branding
 Version: 0.0.1
 Authors@R: 
     person(given = "Cameron",
